--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section
         <section id="projects">
 
-          <div id= "tec-documentation"class="project-tile">
+          <article id= "tec-documentation"class="project-tile">
             <h1>Technical Documentation page</h1>
             <p class="project-description">This project was made as part of the freecodecamp Responsive Webdesign curriculum and I just used my markdown notes for college exams as the actual content. I also used mathjax to display the mathematical parts</p>
             <div class=div-links>
@@ -37,9 +37,9 @@
             <a class="project-links" href="https://github.com/emmaa5/enemNotes">GitHub repository</a>
             </div>
             <img class="page-preview" src="images/TechnicalDoc.jpg" alt="Technical Documentation page preview">
-          </div>
+          </article>
 
-          <div id="project-landing" class="project-tile">
+          <article id="project-landing" class="project-tile">
             <h1>Project Landing</h1>
             <p class="project-description">This is also part of the freecodecamp curriculum.The business "IoTarc" doesn't actually exist, I got it from some random name generators and decided it was about mobile devices designed with strong privacy in mind. This was just to complete the project, so I don't intend to actually work on this project</p>
             <div class=div-links>
@@ -47,9 +47,9 @@
             <a class="project-links" href="https://github.com/emmaa5/productLanding">GitHub repository</a>
             </div>
             <img class="page-preview" src="/images/ProductLanding.jpg" alt="Project Landing page preview">           
-          </div>
+          </article>
 
-          <div id="cassia-eller" class="project-tile">
+          <article id="cassia-eller" class="project-tile">
             <h1>Cássia Eller Tribute Page</h1>
             <p class="project-description" style="grid-column: 1/1;">Also for freecodecamp curriculum, this one I decided to dedicate the tribute page to Cássia Eller, a really famous and influencial brazilian singer that I like a lot</p>
             <div class=div-links>
@@ -58,7 +58,7 @@
             
             </div>
             <img class="page-preview" src="/images/TributePage.jpg" alt="Cássia Eller Tribute Page preview">
-          </div>
+          </article>
                         
           </section>
           <section id="about-me">
